; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_range_tree.c_range_tree_find_impl.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_range_tree.c_range_tree_find_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_5__*, i64, i64)* @range_tree_find_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @range_tree_find_impl(%struct.TYPE_5__* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = add nsw i64 %9, %10
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp ne i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @VERIFY(i32 %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @rs_set_start(i32* %7, %struct.TYPE_5__* %16, i64 %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %20 = load i64, i64* %8, align 8
  %21 = call i32 @rs_set_end(i32* %7, %struct.TYPE_5__* %19, i64 %20)
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = call i32* @zfs_btree_find(i32* %23, i32* %7, i32* null)
  ret i32* %24
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @rs_set_start(i32*, %struct.TYPE_5__*, i64) #1

declare dso_local i32 @rs_set_end(i32*, %struct.TYPE_5__*, i64) #1

declare dso_local i32* @zfs_btree_find(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
